--- a/scrapy/price/scrapy.cfg
+++ b/scrapy/price/scrapy.cfg
@@ -4,8 +4,8 @@
 # http://doc.scrapy.org/en/latest/topics/scrapyd.html
 
 [settings]
-default = flipkart.settings
+default = price.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = flipkart
+project = price
